--- a/ShoppingCart/src/main/resources/templates/login.html
+++ b/ShoppingCart/src/main/resources/templates/login.html
@@ -6,8 +6,38 @@
 </head>
 <body>
 <section>
-    <h1>Login Page</h1>
+    <div class="container mt-5 p-5">
+        <div class="row">
+            <div class="col-md-6 p-5">
+                <img src="img/ecom.png" width="100%" height="400px">
+            </div>
+            <div class="col-md-6 mt-5 p-5">
+                <div class="card">
+                    <div class="card-header">
+                        <p class="fs-4 text-center">Login</p>
+                    </div>
+                    <div class="card-body">
+                        <form>
+                            <div class="mb-3">
+                                <label class="form-label">Email</label>
+                                <input class="form-control" name="email" type="email">
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Password</label>
+                                <input class="form-control" name="password" type="password">
+                            </div>
+                            <button type="submit" class="btn bg-primary text-white col-md-12">Login</button>
+                        </form>
+                    </div>
+                    <div class="card-footer text-center">
+                        <a href="#" class="text-decoration-none">Forgot Password?</a><br>
+                        Don't have an account?
+                        <a href="#" class="text-decoration-none">Create one </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
-<h1>Demo page</h1>
 </body>
 </html>
