--- a/ShoppingCart/src/main/resources/templates/registration.html
+++ b/ShoppingCart/src/main/resources/templates/registration.html
@@ -6,7 +6,76 @@
 </head>
 <body>
 <section>
-    <h1>Registration Page</h1>
+    <div class="container mt-5 p-5">
+        <div class="row">
+            <div class="col-md-6 p-5">
+                <img src="img/ecom.png" width="100%" height="400px">
+            </div>
+            <div class="col-md-6 p-5">
+                <div class="card">
+                    <div class="card-header">
+                        <p class="fs-4 text-center">Registration</p>
+                    </div>
+                    <div class="card-body">
+                        <form>
+                            <div class="row">
+                                <div class="col">
+                                    <label class="form-label">Full Name</label>
+                                    <input class="form-control" name="name" type="text">
+                                </div>
+                                <div class="col">
+                                    <label class="form-label">Mobile Number</label>
+                                    <input class="form-control" name="mobileMNum" type="password">
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Email</label>
+                                <input class="form-control" name="email" type="email">
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <label class="form-label">State</label>
+                                    <input class="form-control" name="state" type="text">
+                                </div>
+                                <div class="col">
+                                    <label class="form-label">City</label>
+                                    <input class="form-control" name="city" type="text">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <label class="form-label">Address</label>
+                                    <input class="form-control" name="address" type="text">
+                                </div>
+                                <div class="col">
+                                    <label class="form-label">Pincode</label>
+                                    <input class="form-control" name="pincode" type="number">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <label class="form-label">Password</label>
+                                    <input class="form-control" name="password" type="text">
+                                </div>
+                                <div class="col">
+                                    <label class="form-label">Confirm Password</label>
+                                    <input class="form-control" name="confirmPassword" type="password">
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Profile Image</label><input class="form-control"
+                                                                                      name="profileImage" type="file">
+                            </div>
+                            <button type="submit" class="btn bg-primary text-white col-md-12">Register</button>
+                        </form>
+                    </div>
+                    <div class="card-footer text-center">
+                        Have an account? <a href="/login" class="text-decoration-none">Login</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 </body>
 </html>
