basic setup2, admin pages added + AdminController

--- a/ShoppingCart/src/main/resources/templates/base.html
+++ b/ShoppingCart/src/main/resources/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
           integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 <!--Start Navbar-->
@@ -25,7 +26,7 @@
                     <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-house"></i> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Product</a>
+                    <a class="nav-link active" aria-current="page" href="/products">Product</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
