--- a/ShoppingCart/src/main/resources/templates/Admin/add_product.html
+++ b/ShoppingCart/src/main/resources/templates/Admin/add_product.html
@@ -25,7 +25,7 @@
                             <div class="mb-3">
                                 <label>Category </label> <select class="form-control">
                                 <option>--select--</option>
-                                <option>Electronics</option>
+                                <option th:each="c:${categories}">[[${c.name}]]</option>
                             </select>
                             </div>
                             <div class="mb-3">
