product model, product CRUD operations + front-end

--- a/ShoppingCart/src/main/resources/templates/Admin/edit_product.html
+++ b/ShoppingCart/src/main/resources/templates/Admin/edit_product.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <section>
-    <div class="container p-5 mt-3">
+    <div class="container-fluid p-5 mt-3">
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <div class="card card-sh">
                     <div class="card-header text-center">
-                        <p class="fs-4">Add Product</p>
+                        <p class="fs-4">Edit Category</p>
                         <th:block th:if="${session.succMsg}">
                             <p class="text-success fw-bold">[[${session.succMsg}]]</p>
                             <th:block th:text="${@commonServiceImpl.removeSessionMessage()}"></th:block>
@@ -22,37 +22,41 @@
                         </th:block>
                     </div>
                     <div class="card-body">
-                        <form action="/admin/saveProduct" method="post" enctype="multipart/form-data">
+                        <form action="/admin/updateProduct" method="post" enctype="multipart/form-data">
                             <div class="mb-3">
+                                <input type="hidden" name="id" th:value="${product.id}">
                                 <label>Enter title: </label>
-                                <input type="text" name="title" class="form-control">
+                                <input type="text" name="title" class="form-control" th:value="${product.title}">
                             </div>
                             <div class="mb-3">
                                 <label>Enter Description: </label>
-                                <textarea rows="3" cols="" class="form-control" name="description"></textarea>
+                                <textarea rows="3" cols="" class="form-control" name="description"
+                                          th:value="${product.description}">[[${product.description}]]</textarea>
                             </div>
                             <div class="mb-3">
-                                <label>Category </label>
+                                <label>Category</label>
                                 <select class="form-control" name="category">
-                                <option>--select--</option>
-                                <option th:each="c:${categories}">[[${c.name}]]</option>
-                            </select>
+                                    <option>[[${product.category}]]</option>
+                                    <option th:each="c:${categories}" th:value="${product.category}">[[${c.name}]]
+                                    </option>
+                                </select>
                             </div>
                             <div class="mb-3">
-                                <label>Enter Price: </label>
-                                <input type="number" name="price" class="form-control">
+                                <label>Enter Price:</label>
+                                <input type="number" name="price" class="form-control" th:value="${product.price}">
                             </div>
                             <div class="row">
                                 <div class="mb-3 col">
                                     <label>Enter Stock</label>
-                                    <input type="number" name="stock" class="form-control">
+                                    <input type="number" name="stock" class="form-control" th:value="${product.stock}">
                                 </div>
                                 <div class="mb-3 col">
                                     <label>Upload Image</label>
                                     <input type="file" name="file" class="form-control">
+                                    <img th:src="@{'/img/product_img/'+${product.image}}" width="70px" height="70px">
                                 </div>
                             </div>
-                            <button class="btn btn-primary col-md-12">Submit</button>
+                            <button class="btn btn-primary col-md-12">Update</button>
                         </form>
                     </div>
                 </div>
