--- a/ShoppingCart/src/main/resources/templates/Admin/index.html
+++ b/ShoppingCart/src/main/resources/templates/Admin/index.html
@@ -30,7 +30,7 @@
                 </a>
             </div>
             <div class="col-md-4 mt-4">
-                <a href="#" class="text-decoration-none">
+                <a href="/admin/products" class="text-decoration-none">
                     <div class="card card-sh">
                         <div class="card-body text-center text-primary">
                             <i class="fa-brands fa-product-hunt fa-3x"></i>
