--- a/ShoppingCart/src/main/resources/templates/base.html
+++ b/ShoppingCart/src/main/resources/templates/base.html
@@ -15,7 +15,7 @@
 <!--Start Navbar-->
 <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><i class="fa-solid fa-cart-shopping"></i> Ecom Store</a>
+        <a class="navbar-brand" href="/"><i class="fa-solid fa-cart-shopping"></i> Ecom Store</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-house"></i> Home</a>
+                    <a class="nav-link active" aria-current="page" href="/"><i class="fa-solid fa-house"></i> Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/products">Product</a>
@@ -64,7 +64,7 @@
 <div th:replace="${content}"></div>
 
 <!--Start Footer-->
-<div class="container-fluid p-1 bg-primary text-center text-white">
+<div class="container-fluid p-1 bg-primary text-center text-white" style="margin-top: 250px">
     <p>Ecom.com</p>
 </div>
 <!--End Footer-->
