product discount feature added, single product page dynamic implementation

--- a/ShoppingCart/src/main/resources/templates/Admin/category.html
+++ b/ShoppingCart/src/main/resources/templates/Admin/category.html
@@ -37,7 +37,8 @@
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="isActive"
-                                           id="flexRadioDefault2" value="false">
+                                           id="flexRadio
+                                           Default2" value="false">
                                     <label class="form-check-label" for="flexRadioDefault2">
                                         Inactive
                                     </label>
