--- a/ShoppingCart/src/main/resources/templates/Admin/add_product.html
+++ b/ShoppingCart/src/main/resources/templates/Admin/add_product.html
@@ -42,6 +42,23 @@
                                 <label>Enter Price: </label>
                                 <input type="number" name="price" class="form-control">
                             </div>
+                            <div class="mb-3">
+                                <label>Status</label>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="isActive"
+                                           id="flexRadioDefault1" checked value="true">
+                                    <label class="form-check-label" for="flexRadioDefault1">
+                                        Active
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="isActive"
+                                           id="flexRadioDefault2" value="false">
+                                    <label class="form-check-label" for="flexRadioDefault2">
+                                        Inactive
+                                    </label>
+                                </div>
+                            </div>
                             <div class="row">
                                 <div class="mb-3 col">
                                     <label>Enter Stock</label>
