--- a/ShoppingCart/src/main/resources/templates/Admin/edit_product.html
+++ b/ShoppingCart/src/main/resources/templates/Admin/edit_product.html
@@ -8,7 +8,7 @@
 <section>
     <div class="container-fluid p-5 mt-3">
         <div class="row">
-            <div class="col-md-6 offset-md-3">
+            <div class="col-md-8 offset-md-2">
                 <div class="card card-sh">
                     <div class="card-header text-center">
                         <p class="fs-4">Edit Category</p>
@@ -33,17 +33,50 @@
                                 <textarea rows="3" cols="" class="form-control" name="description"
                                           th:value="${product.description}">[[${product.description}]]</textarea>
                             </div>
-                            <div class="mb-3">
-                                <label>Category</label>
-                                <select class="form-control" name="category">
-                                    <option>[[${product.category}]]</option>
-                                    <option th:each="c:${categories}" th:value="${product.category}">[[${c.name}]]
-                                    </option>
-                                </select>
+                            <div class="row">
+                                <div class="mb-3 col">
+                                    <label>Category</label>
+                                    <select class="form-control" name="category">
+                                        <option>[[${product.category}]]</option>
+                                        <option th:each="c:${categories}" th:value="${product.category}">[[${c.name}]]
+                                        </option>
+                                    </select>
+                                </div>
                             </div>
-                            <div class="mb-3">
+                            <div class="mb-3 col">
                                 <label>Enter Price:</label>
                                 <input type="number" name="price" class="form-control" th:value="${product.price}">
+                            </div>
+                            <div class="row">
+                                <div class="mb-3 col">
+                                    <label>Discount</label>
+                                    <input type="number" name="discount" th:value="${product.discount}"
+                                           class="form-control">
+                                </div>
+                                <div class="mb-3 col">
+                                    <label>Discount Price</label>
+                                    <input type="number" name="discountPrice" th:value="${product.discountPrice}"
+                                           readonly class="form-control">
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label>Status</label>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="isActive"
+                                           id="flexRadioDefault1" checked value="true"
+                                           th:checked="${product.isActive == true}">
+                                    <label class="form-check-label" for="flexRadioDefault1">
+                                        Active
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="isActive"
+                                           id="flexRadioDefault2" value="false"
+                                           th:checked="${product.isActive == false}">
+                                    <label class="form-check-label" for="flexRadioDefault2">
+                                        Inactive
+                                    </label>
+                                </div>
                             </div>
                             <div class="row">
                                 <div class="mb-3 col">
