--- a/ShoppingCart/src/main/resources/templates/Admin/products.html
+++ b/ShoppingCart/src/main/resources/templates/Admin/products.html
@@ -28,6 +28,9 @@
                         <th scope="col">Title</th>
                         <th scope="col">Category</th>
                         <th scope="col">Price</th>
+                        <th scope="col">Discount</th>
+                        <th scope="col">Discount Price</th>
+                        <th scope="col">Status</th>
                         <th scope="col">Stock</th>
                         <th scope="col">Action</th>
                     </tr>
@@ -41,6 +44,9 @@
                         <td>[[${p.title}]]</td>
                         <td>[[${p.category}]]</td>
                         <td>[[${p.price}]]</td>
+                        <td>[[${p.discount}]]</td>
+                        <td>[[${p.discountPrice}]]</td>
+                        <td>[[${p.isActive}]]</td>
                         <td>[[${p.stock}]]</td>
                         <td>
                             <a th:href="@{'/admin/loadEditProduct/'+${p.id}}" class="btn btn-sm btn-primary">
