--- a/ShoppingCart/src/main/resources/templates/view_product.html
+++ b/ShoppingCart/src/main/resources/templates/view_product.html
@@ -13,24 +13,30 @@
                     <img src="img/product_img/laptop.jpg" width="330px" height="400px">
                 </div>
                 <div class="col-md-6">
-                    <p class="fs-3">Laptop</p>
+                    <p class="fs-3">[[${product.title}]]</p>
                     <p>
-                        <span class="fw-bold">Description: </span> HP Laptop, 256GB SSD
+                        <span class="fw-bold">Description: </span> [[${product.description}]]
                     </p>
                     <p>
-                        <span class="fw-bold">Product Details: </span><br> Status: <span
-                            class="badge bg-success">Available</span>
-                        <span class="badge bg-warning">out of stock</span> <br> Category: Laptop <br>
+                        <span class="fw-bold">Product Details: </span>
+                        <br> Status:
+                        <th:block th:if="${product.stock} > 0">
+                            <span class="badge bg-success">Available</span>
+                        </th:block>
+                        <th:block th:unless="${product.stock > 0}">
+                            <span class="badge bg-warning">out of stock</span>
+                        </th:block>
+                        <br> Category: [[${product.category}]] <br>
                         Policy: 7 Days Replacement & Return
                     </p>
                     <p class="fs-5 fw-bold">
                         Price: &nbsp; &nbsp; &nbsp; &nbsp; <i class="fas fa-rupee-sign"></i>
-                        700000 <span class="fs-6 text-decoration-line-through text-secondary">5000</span>
-                        <span class="fs-6 text-success">50% off</span>
+                        [[${product.discountPrice}]] <span class="fs-6 text-decoration-line-through text-secondary">[[${product.price}]]</span>
+                        <span class="fs-6 text-success">[[${product.discount}]]% off</span>
                     </p>
 
                     <div class="row">
-                        <div class="col-md-4 text-danger text-center p-2">
+                        <div class="col-md-4 text-success text-center p-2">
                             <i class="fas fa-money-bill-wave fa-2x"></i>
                             <p>Cash on delivery</p>
                         </div>
@@ -38,12 +44,17 @@
                             <i class="fas fa-undo-alt fa-2x"></i>
                             <p>Return Available</p>
                         </div>
-                        <div class="col-md-4 text-danger text-center p-2">
+                        <div class="col-md-4 text-primary text-center p-2">
                             <i class="fas fa-truck-moving fa-2x"></i>
                             <p>Free Shipping</p>
                         </div>
                     </div>
-                    <a href="login.jsp" class="btn btn-danger col-md-12">Add to Cart</a>
+                    <th:block th:if="${product.stock} > 0">
+                        <a href="login.jsp" class="btn btn-danger col-md-12">Add to Cart</a>
+                    </th:block>
+                    <th:block th:unless="${product.stock} > 0">
+                        <a href="#" class="btn btn-warning col-md-12">Out of Stock</a>
+                    </th:block>
                 </div>
             </div>
         </div>
