--- a/ShoppingCart/src/main/resources/templates/registration.html
+++ b/ShoppingCart/src/main/resources/templates/registration.html
@@ -13,58 +13,66 @@
             </div>
             <div class="col-md-6 p-5">
                 <div class="card">
-                    <div class="card-header">
+                    <div class="card-header text-center">
                         <p class="fs-4 text-center">Registration</p>
+                        <th:block th:if="${session.succMsg}">
+                            <p class="text-success fw-bold">[[${session.succMsg}]]</p>
+                            <th:block th:text="${@commonServiceImpl.removeSessionMessage()}"></th:block>
+                        </th:block>
+                        <th:block th:if="${session.errorMsg}">
+                            <p class="text-danger fw-bold">[[${session.errorMsg}]]</p>
+                            <th:block th:text="${@commonServiceImpl.removeSessionMessage()}"></th:block>
+                        </th:block>
                     </div>
                     <div class="card-body">
-                        <form>
+                        <form method="post" action="/saveUser" enctype="multipart/form-data">
                             <div class="row">
                                 <div class="col">
                                     <label class="form-label">Full Name</label>
-                                    <input class="form-control" name="name" type="text">
+                                    <input required class="form-control" name="name" type="text">
                                 </div>
                                 <div class="col">
                                     <label class="form-label">Mobile Number</label>
-                                    <input class="form-control" name="mobileMNum" type="password">
+                                    <input required class="form-control" name="mobileNum" type="number">
                                 </div>
                             </div>
                             <div class="mb-3">
                                 <label class="form-label">Email</label>
-                                <input class="form-control" name="email" type="email">
+                                <input required class="form-control" name="email" type="email">
                             </div>
                             <div class="row">
                                 <div class="col">
                                     <label class="form-label">State</label>
-                                    <input class="form-control" name="state" type="text">
+                                    <input required class="form-control" name="state" type="text">
                                 </div>
                                 <div class="col">
                                     <label class="form-label">City</label>
-                                    <input class="form-control" name="city" type="text">
+                                    <input required class="form-control" name="city" type="text">
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col">
                                     <label class="form-label">Address</label>
-                                    <input class="form-control" name="address" type="text">
+                                    <input required class="form-control" name="address" type="text">
                                 </div>
                                 <div class="col">
                                     <label class="form-label">Pincode</label>
-                                    <input class="form-control" name="pincode" type="number">
+                                    <input required class="form-control" name="pincode" type="number">
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col">
                                     <label class="form-label">Password</label>
-                                    <input class="form-control" name="password" type="text">
+                                    <input required class="form-control" name="password" type="password">
                                 </div>
                                 <div class="col">
                                     <label class="form-label">Confirm Password</label>
-                                    <input class="form-control" name="confirmPassword" type="password">
+                                    <input required class="form-control" name="confirmPassword" type="password">
                                 </div>
                             </div>
                             <div class="mb-3">
                                 <label class="form-label">Profile Image</label><input class="form-control"
-                                                                                      name="profileImage" type="file">
+                                                                                      name="profilePic" type="file">
                             </div>
                             <button type="submit" class="btn bg-primary text-white col-md-12">Register</button>
                         </form>
