--- a/ShoppingCart/src/main/resources/templates/login.html
+++ b/ShoppingCart/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
                     <div class="card-header">
                         <p class="fs-4 text-center">Login</p>
                         <div th:if="${param.error}" class="alert alert-danger">
-                            Invalid email or password
+                            [[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]
                         </div>
                         <div th:if="${param.logout}" class="alert alert-success">
                             Logged out successfully
