--- a/ShoppingCart/src/main/resources/templates/error.html
+++ b/ShoppingCart/src/main/resources/templates/error.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://thymeleaf.org" th:replace="base::Layout(~{::section})">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<section>
+    <div class="container mt-5 p-5">
+        <div class="row">
+            <div class="col-md-6 p-5 text-center offset-md-3">
+                <h3>[[${errorMsg}]]</h3>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
