authorization and authentication part 2, add to cart onset

--- a/ShoppingCart/src/main/resources/templates/reset_password.html
+++ b/ShoppingCart/src/main/resources/templates/reset_password.html
@@ -15,7 +15,7 @@
                 <div class="card">
                     <div class="card-header">
                         <p class="fs-4 text-center">Reset Password</p>
-                        <th:block th:if="${session.msg}">
+                        <th:block th:if="${session.succMsg}">
                             <p class="text-success fw-bold text-center">[[${session.succMsg}]]</p>
                             <th:block th:text="${@commonServiceImpl.removeSessionMessage()}"></th:block>
                         </th:block>
