--- a/ShoppingCart/src/main/resources/templates/forgot_password.html
+++ b/ShoppingCart/src/main/resources/templates/forgot_password.html
@@ -15,7 +15,7 @@
                 <div class="card">
                     <div class="card-header">
                         <p class="fs-4 text-center">Login</p>
-                        <th:block th:if="${session.msg}">
+                        <th:block th:if="${session.succMsg}">
                             <p class="text-success fw-bold text-center">[[${session.succMsg}]]</p>
                             <th:block th:text="${@commonServiceImpl.removeSessionMessage()}"></th:block>
                         </th:block>
@@ -28,7 +28,7 @@
                         <form action="/forgot-password" method="post">
                             <div class="mb-3">
                                 <label class="form-label">Email</label>
-                                <input class="form-control" name="username" type="email" placeholder="Enter your email">
+                                <input class="form-control" name="email" type="email" placeholder="Enter your email">
                             </div>
                             <div class="text-center">
                                 <button type="submit" class="btn bg-primary text-white">Send</button>
