--- a/ShoppingCart/src/main/resources/templates/base.html
+++ b/ShoppingCart/src/main/resources/templates/base.html
@@ -59,6 +59,10 @@
                 </th:block>
 
                 <th:block th:if="${user != null}">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/user/cart"><i
+                                class="fa-solid fa-cart-shopping"></i> Cart ([[${cartCount}]])</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
                            aria-expanded="false">
