update user profile functionality, order processing complete

--- a/ShoppingCart/src/main/resources/templates/User/cart.html
+++ b/ShoppingCart/src/main/resources/templates/User/cart.html
@@ -66,7 +66,7 @@
                 <div class="text-center">
                     <tr th:if="${!carts.isEmpty()}">
                         <td colspan="6" class="text-center">
-                            <a href="/user/orders" class="btn btn-warning">Proceed to payment</a>
+                            <a href="/user/order" class="btn btn-warning">Proceed to payment</a>
                         </td>
                     </tr>
                 </div>
