--- a/ShoppingCart/src/main/resources/templates/User/order.html
+++ b/ShoppingCart/src/main/resources/templates/User/order.html
@@ -71,19 +71,19 @@
                                 <tbody>
                                 <tr>
                                     <td>Total price</td>
-                                    <td>41241</td>
+                                    <td>[[${netPrice}]]</td>
                                 </tr>
                                 <tr>
                                     <td>Delivery fee</td>
-                                    <td>222</td>
+                                    <td>250</td>
                                 </tr>
                                 <tr>
                                     <td>Tax</td>
-                                    <td>22</td>
+                                    <td>100</td>
                                 </tr>
                                 <tr class="border-top">
-                                    <td>Tax</td>
-                                    <td>22</td>
+                                    <td>Subtotal</td>
+                                    <td>[[${subtotal}]]</td>
                                 </tr>
                                 </tbody>
                             </table>
