--- a/ShoppingCart/src/main/resources/templates/User/order_success.html
+++ b/ShoppingCart/src/main/resources/templates/User/order_success.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://thymeleaf.org" th:replace="base::Layout(~{::section})">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<h1>Order has been placed successfully</h1>
+<section>
+    <div class="container mt-5 p-5">
+        <div class="row">
+            <div class="col-md-6 offset-md-3 text-center">
+                <i class="fa-solid fa-circle-check fa-5x text-success"></i>
+                <p class="fs-3">Your product order has been placed successfully!</p>
+                <p class="fs-3">Products will be delivered within 7 days</p>
+                <div class="text-center">
+                    <a href="/" class="btn btn-primary">Home</a>
+                    <a href="/user/orders" class="btn btn-primary">Your Orders</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
