--- a/ShoppingCart/src/main/resources/templates/base.html
+++ b/ShoppingCart/src/main/resources/templates/base.html
@@ -59,27 +59,25 @@
                 </th:block>
 
                 <th:block th:if="${user != null}">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/user/cart"><i
-                                class="fa-solid fa-cart-shopping"></i> Cart ([[${cartCount}]])</a>
-                    </li>
+                    <th:block th:if="${user.role == 'ROLE_USER'}">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/user/cart"><i
+                                    class="fa-solid fa-cart-shopping"></i> Cart ([[${cartCount}]])</a>
+                        </li>
+                    </th:block>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
                            aria-expanded="false">
                             <i class="fa-solid fa-user"></i> [[${user.name}]]
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Profile</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="/user/profile">Profile</a></li>
+                            <li><a class="dropdown-item" href="/user/orders">My Orders</a></li>
+                            <li><a class="dropdown-item" href="/logout">Logout</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/logout"><i
-                                class="fa-solid fa-right-to-bracket"></i> Log out</a>
                     </li>
                 </th:block>
             </ul>
