--- a/ShoppingCart/src/main/resources/templates/reset_password.html
+++ b/ShoppingCart/src/main/resources/templates/reset_password.html
@@ -32,7 +32,7 @@
                             </div>
                             <div class="mb-3">
                                 <label class="form-label">Confirm Password</label>
-                                <input class="form-control" name="password" type="password">
+                                <input class="form-control" name="confirmPassword" type="password">
                             </div>
                             <input type="hidden" th:value="${token}" name="token">
                             <button type="submit" class="btn bg-primary text-white col-md-12">Reset Password</button>
