--- a/ShoppingCart/src/main/resources/templates/Admin/orders.html
+++ b/ShoppingCart/src/main/resources/templates/Admin/orders.html
@@ -19,10 +19,10 @@
             </th:block>
             <hr>
             <div class="col-md-4 p-4">
-                <form>
+                <form action="/admin/search-order" method="get">
                     <div class="row">
                         <div class="col">
-                            <input type="text" class="form-control" name="" placeholder="Enter order ID">
+                            <input type="text" class="form-control" name="orderId" placeholder="Enter order ID">
                         </div>
                         <div class="col">
                             <button class="btn btn-primary col">Search</button>
@@ -44,46 +44,99 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="order, c : ${orders}">
-                        <th scope="row">[[${c.count}]]</th>
-                        <td>
-                            Name: [[${order.orderAddress.firstName+' '+order.orderAddress.lastName}]]<br>
-                            Email: [[${order.orderAddress.email}]]<br>
-                            Mobile Number: [[${order.orderAddress.mobileNumber}]]<br>
-                            Address: [[${order.orderAddress.address}]]<br>
-                            State: [[${order.orderAddress.state}]]<br>
-                            City: [[${order.orderAddress.city}]]<br>
-                        </td>
-                        <td>[[${order.orderDate}]]</td>
-                        <td>[[${order.product.title}]]</td>
-                        <td>[[${order.quantity} * ${order.price}]]</td>
-                        <td>[[${order.status}]]</td>
-                        <td>
-                            <form action="/admin/update-order-status" method="post">
-                                <div class="row">
-                                    <div class="col">
-                                        <select class="form-control" name="status">
-                                            <option value="1">In Progress</option>
-                                            <option value="2">Order Received</option>
-                                            <option value="3">Product Packed</option>
-                                            <option value="4">Out For Delivery</option>
-                                            <option value="5">Delivered</option>
-                                            <option value="6">CANCELLED</option>
-                                        </select>
+                    <th:block th:if="${searchMode}">
+                        <th:block th:if="${order != null}">
+                            <tr>
+                                <th scope="row">[[${order.orderId}]]</th>
+                                <td>
+                                    Name: [[${order.orderAddress.firstName+' '+order.orderAddress.lastName}]]<br>
+                                    Email: [[${order.orderAddress.email}]]<br>
+                                    Mobile Number: [[${order.orderAddress.mobileNumber}]]<br>
+                                    Address: [[${order.orderAddress.address}]]<br>
+                                    State: [[${order.orderAddress.state}]]<br>
+                                    City: [[${order.orderAddress.city}]]<br>
+                                </td>
+                                <td>[[${order.orderDate}]]</td>
+                                <td>[[${order.product.title}]]</td>
+                                <td>[[${order.quantity} * ${order.price}]]</td>
+                                <td>[[${order.status}]]</td>
+                                <td>
+                                    <form action="/admin/update-order-status" method="post">
+                                        <div class="row">
+                                            <div class="col">
+                                                <select class="form-control" name="status">
+                                                    <option value="1">In Progress</option>
+                                                    <option value="2">Order Received</option>
+                                                    <option value="3">Product Packed</option>
+                                                    <option value="4">Out For Delivery</option>
+                                                    <option value="5">Delivered</option>
+                                                    <option value="6">CANCELLED</option>
+                                                </select>
+                                            </div>
+                                            <input th:value="${order.id}" name="id" type="hidden">
+                                            <div class="col">
+                                                <th:block
+                                                        th:if="${order.status == 'CANCELLED' || order.status == 'Delivered'}">
+                                                    <button class="btn btn-primary btn-sm col disabled">Update</button>
+                                                </th:block>
+                                                <th:block
+                                                        th:unless="${order.status == 'CANCELLED' || order.status == 'Delivered'}">
+                                                    <button class="btn btn-primary btn-sm">Update</button>
+                                                </th:block>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </td>
+                            </tr>
+                        </th:block>
+                        <th:block th:unless="${order != null}">
+                            <p class="fs-3 text-center text-danger">[[${errorMsg}]]</p>
+                        </th:block>
+                    </th:block>
+                    <th:block th:unless="${searchMode}">
+                        <tr th:each="order, c : ${orders}">
+                            <th scope="row">[[${order.orderId}]]</th>
+                            <td>
+                                Name: [[${order.orderAddress.firstName+' '+order.orderAddress.lastName}]]<br>
+                                Email: [[${order.orderAddress.email}]]<br>
+                                Mobile Number: [[${order.orderAddress.mobileNumber}]]<br>
+                                Address: [[${order.orderAddress.address}]]<br>
+                                State: [[${order.orderAddress.state}]]<br>
+                                City: [[${order.orderAddress.city}]]<br>
+                            </td>
+                            <td>[[${order.orderDate}]]</td>
+                            <td>[[${order.product.title}]]</td>
+                            <td>[[${order.quantity} * ${order.price}]]</td>
+                            <td>[[${order.status}]]</td>
+                            <td>
+                                <form action="/admin/update-order-status" method="post">
+                                    <div class="row">
+                                        <div class="col">
+                                            <select class="form-control" name="status">
+                                                <option value="1">In Progress</option>
+                                                <option value="2">Order Received</option>
+                                                <option value="3">Product Packed</option>
+                                                <option value="4">Out For Delivery</option>
+                                                <option value="5">Delivered</option>
+                                                <option value="6">CANCELLED</option>
+                                            </select>
+                                        </div>
+                                        <input th:value="${order.id}" name="id" type="hidden">
+                                        <div class="col">
+                                            <th:block
+                                                    th:if="${order.status == 'CANCELLED' || order.status == 'Delivered'}">
+                                                <button class="btn btn-primary btn-sm col disabled">Update</button>
+                                            </th:block>
+                                            <th:block
+                                                    th:unless="${order.status == 'CANCELLED' || order.status == 'Delivered'}">
+                                                <button class="btn btn-primary btn-sm">Update</button>
+                                            </th:block>
+                                        </div>
                                     </div>
-                                    <input th:value="${order.id}" name="id" type="hidden">
-                                    <div class="col">
-                                        <th:block th:if="${order.status == 'CANCELLED' || order.status == 'Delivered'}">
-                                            <button class="btn btn-primary btn-sm col disabled">Update</button>
-                                        </th:block>
-                                        <th:block th:unless="${order.status == 'CANCELLED' || order.status == 'Delivered'}">
-                                            <button class="btn btn-primary btn-sm">Update</button>
-                                        </th:block>
-                                    </div>
-                                </div>
-                            </form>
-                        </td>
-                    </tr>
+                                </form>
+                            </td>
+                        </tr>
+                    </th:block>
                     </tbody>
                 </table>
             </div>
