--- a/ShoppingCart/src/main/resources/templates/User/profile.html
+++ b/ShoppingCart/src/main/resources/templates/User/profile.html
@@ -84,7 +84,7 @@
                     <div class="col-md-6 offset-md-3">
                         <table class="table table-borderless">
                             <tbody>
-                            <form action="">
+                            <form action="/user/change-password" method="post">
                                 <tr>
                                     <th scope="row">Current Password</th>
                                     <td><input type="password" name="currentPassword" class="form-control">
