--- a/ShoppingCart/src/main/resources/templates/registration.html
+++ b/ShoppingCart/src/main/resources/templates/registration.html
@@ -33,7 +33,7 @@
                                 </div>
                                 <div class="col">
                                     <label class="form-label">Mobile Number</label>
-                                    <input required class="form-control" name="mobileNum" type="number">
+                                    <input required class="form-control" name="mobileNumber" type="text">
                                 </div>
                             </div>
                             <div class="mb-3">
@@ -57,7 +57,7 @@
                                 </div>
                                 <div class="col">
                                     <label class="form-label">Pincode</label>
-                                    <input required class="form-control" name="pincode" type="number">
+                                    <input required class="form-control" name="pincode" type="text">
                                 </div>
                             </div>
                             <div class="row">
@@ -72,7 +72,7 @@
                             </div>
                             <div class="mb-3">
                                 <label class="form-label">Profile Image</label><input class="form-control"
-                                                                                      name="profilePic" type="file">
+                                                                                      name="profileImage" type="file">
                             </div>
                             <button type="submit" class="btn bg-primary text-white col-md-12">Register</button>
                         </form>
