--- a/ShoppingCart/src/main/resources/templates/product.html
+++ b/ShoppingCart/src/main/resources/templates/product.html
@@ -29,12 +29,12 @@
                         <div class="list-group">
                             <p class="fs-5">Category</p>
                             <a href="/products"
-                               th:classappend="${paramValue} == cat.name ? 'active' : ''"
+                               th:classappend="${paramValue} == '' ? 'active' : ''"
                                class="list-group-item list-group-item-action active"
                                aria-current="true">
                                 All
                             </a>
-                            <a th:each="cat, c : ${activeCategories}" th:href="@{'/products?category='+${cat.name}}"
+                            <a th:each="cat:${activeCategories}" th:href="@{'/products?category='+${cat.name}}"
                                th:classappend="${paramValue} == cat.name ? 'active' : ''"
                                class="list-group-item list-group-item-action">
                                 [[${cat.name}]]
@@ -43,16 +43,17 @@
                     </div>
                 </div>
             </div>
-            <th:block th:if="${activeProducts.size > 0}">
-                <div class="col-md-10">
-                    <div class="card">
-                        <div class="card-body">
-                            <p class="fs-3 text-center">Products</p>
-                            <div class="row">
+            <div class="col-md-10">
+                <div class="card shadow-sm p-3 mb-5 bg-body-tertiary rounded">
+                    <div class="card-body">
+                        <p class="fs-3 text-center">Products</p>
+                        <div class="row">
+                            <th:block th:if="${productsSize > 0}">
                                 <div class="col-md-3" th:each="prod:${activeProducts}">
                                     <div class="card">
                                         <div class="card-body">
-                                            <img th:src="@{'/img/product_img/'+${prod.image}}" width="100%" height="150px">
+                                            <img th:src="@{'/img/product_img/'+${prod.image}}" width="100%"
+                                                 height="150px">
                                             <p class="fs-5 text-center">[[${prod.title}]]</p>
                                             <div class="row text-center">
                                                 <p class="fs-6 fw-bold">
@@ -62,21 +63,51 @@
                                                 [[${prod.discount}]]% off
                                             </span>
                                                 </p>
-                                                <a th:href="@{'/product/'+${prod.id}}" class="btn btn-primary col-md-6 offset-md-3">View
+                                                <a th:href="@{'/product/'+${prod.id}}"
+                                                   class="btn btn-primary col-md-6 offset-md-3">View
                                                     Details</a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <!--                            TODO: Remove after backend implementation-->
-                            </div>
+                            </th:block>
+                            <th:block th:unless="${productsSize > 0}">
+                                <p class="fs-4 text-center mt-4 text-danger">Products not available</p>
+                            </th:block>
                         </div>
                     </div>
                 </div>
-            </th:block>
-            <th:block th:unless="${activeProducts.size > 0}">
-                <p class="fs-4 text-center mt-4 text-danger">Products not available</p>
-            </th:block>
+                <div class="row">
+                    <div class="col-md-4">Total Products: [[${totalElements}]]</div>
+                    <div class="col-md-6">
+                        <th:block th:if="${productsSize > 0}">
+                            <nav aria-label="Page navigation example">
+                                <ul class="pagination">
+                                    <li class="page-item">
+                                        <a class="page-link" th:href="@{'/products?pageN='+${pageN - 1}}"
+                                           aria-label="Previous" th:classappend="${isFirst} ? 'disabled':''">
+                                            <span aria-hidden="true">&laquo</span>
+                                        </a>
+                                    </li>
+                                    <li th:each="i:${#numbers.sequence(1, totalPages)}" class="page-item"
+                                        th:classappend="${pageN + 1 == i} ? 'active':''"
+                                    >
+                                        <a class="page-link" th:href="@{'/products?pageN='+${i - 1}}">
+                                            [[${i}]]
+                                        </a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" th:href="@{'/products?pageN='+${pageN + 1}}"
+                                           aria-label="Next" th:classappend="${isLast} ? 'disabled':''">
+                                            <span aria-hidden="true">&raquo</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </th:block>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
