dynamic homepage and JS validations added

--- a/ShoppingCart/src/main/resources/templates/index.html
+++ b/ShoppingCart/src/main/resources/templates/index.html
@@ -34,54 +34,17 @@
     <div class="container">
         <div class="row">
             <p class="text-center fs-4">Category</p>
-            <div class="col-md-2">
+            <div class="col-md-2" th:each="c:${categories}">
                 <div class="card rounded-circle shadow-sm p-3 mb-5 bg-body-tertiary rounded">
                     <div class="card-body text-center">
-                        <img src="img/category_img/appli.png" width="65%" height="140px">
-                        <p>Electronics</p>
+                        <img th:src="@{'img/category_img/'+${c.imageName}}" width="65%" height="140px"><br>
+                        <a th:href="@{'/products?category='+${c.name}}" class="text-decoration-none text-dark">
+                            [[${c.name}]]
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-2">
-                <div class="card rounded-circle shadow-sm p-3 mb-5 bg-body-tertiary rounded">
-                    <div class="card-body text-center">
-                        <img src="img/category_img/beuty.png" width="65%" height="140px">
-                        <p>Beauty</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="card rounded-circle shadow-sm p-3 mb-5 bg-body-tertiary rounded">
-                    <div class="card-body text-center">
-                        <img src="img/category_img/pant.png" width="65%" height="140px">
-                        <p>Clothes</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="card rounded-circle shadow-sm p-3 mb-5 bg-body-tertiary rounded">
-                    <div class="card-body text-center">
-                        <img src="img/category_img/laptop.jpg" width="65%" height="140px">
-                        <p>Laptop</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="card rounded-circle shadow-sm p-3 mb-5 bg-body-tertiary rounded">
-                    <div class="card-body text-center">
-                        <img src="img/category_img/mobile.png" width="65%" height="140px">
-                        <p>Mobile</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="card rounded-circle shadow-sm p-3 mb-5 bg-body-tertiary rounded">
-                    <div class="card-body text-center">
-                        <img src="img/category_img/groccery.jpg" width="65%" height="140px">
-                        <p>Grocery</p>
-                    </div>
-                </div>
-            </div>
+
         </div>
     </div>
     <!--    End Category Module-->
@@ -90,35 +53,15 @@
     <div class="container-fluid bg-light p-3">
         <div class="row">
             <p class="text-center fs-4">Latest Products</p>
-            <div class="col-md-3">
+            <div class="col-md-3" th:each="product:${products}">
                 <div class="card">
                     <div class="card-body text-center">
-                        <img src="img/product_img/laptop.jpg" width="65%" height="140px">
-                        <p class="text-center">HP Laptop></p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <div class="card-body text-center">
-                        <img src="img/product_img/laptop.jpg" width="65%" height="140px">
-                        <p class="text-center">HP Laptop></p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <div class="card-body text-center">
-                        <img src="img/product_img/laptop.jpg" width="65%" height="140px">
-                        <p class="text-center">HP Laptop></p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <div class="card-body text-center">
-                        <img src="img/product_img/laptop.jpg" width="65%" height="140px">
-                        <p class="text-center">HP Laptop></p>
+                        <img th:src="@{'img/product_img/'+${product.image}}" width="65%" height="140px"><br>
+                        <p class="text-center">
+                            <a th:href="@{'/product/'+${product.id}}" class="text-decoration-none text-dark">
+                            [[${product.title}]]>
+                            </a>
+                        </p>
                     </div>
                 </div>
             </div>
