--- a/ShoppingCart/src/main/resources/templates/User/order.html
+++ b/ShoppingCart/src/main/resources/templates/User/order.html
@@ -7,10 +7,9 @@
 <body>
 <section>
     <div class="container mt-5 p-5">
-        <form action="/user/save-order" method="post">
+        <form action="/user/save-order" method="post" id="order" novalidate>
             <div class="row">
                 <div class="col-md-6">
-
                     <p class="text-center fs-2 mb-2">Fill the Form</p>
                     <hr>
                     <div class="mb-5 row">
