--- a/ShoppingCart/src/main/resources/templates/forgot_password.html
+++ b/ShoppingCart/src/main/resources/templates/forgot_password.html
@@ -28,7 +28,8 @@
                         <form action="/forgot-password" method="post">
                             <div class="mb-3">
                                 <label class="form-label">Email</label>
-                                <input class="form-control" name="email" type="email" placeholder="Enter your email">
+                                <input class="form-control" name="email" type="email"
+                                       required placeholder="Enter your email">
                             </div>
                             <div class="text-center">
                                 <button type="submit" class="btn bg-primary text-white">Send</button>
