--- a/ShoppingCart/src/main/resources/templates/reset_password.html
+++ b/ShoppingCart/src/main/resources/templates/reset_password.html
@@ -25,14 +25,14 @@
                         </th:block>
                     </div>
                     <div class="card-body">
-                        <form action="/reset-password" method="post">
+                        <form action="/reset-password" method="post" id="resetPassword" novalidate>
                             <div class="mb-3">
                                 <label class="form-label">New Password</label>
-                                <input class="form-control" name="password" type="password">
+                                <input required class="form-control" id="password" name="password" type="password">
                             </div>
                             <div class="mb-3">
                                 <label class="form-label">Confirm Password</label>
-                                <input class="form-control" name="confirmPassword" type="password">
+                                <input required class="form-control" name="confirmPassword" type="password">
                             </div>
                             <input type="hidden" th:value="${token}" name="token">
                             <button type="submit" class="btn bg-primary text-white col-md-12">Reset Password</button>
