--- a/ShoppingCart/src/main/resources/templates/view_product.html
+++ b/ShoppingCart/src/main/resources/templates/view_product.html
@@ -18,7 +18,7 @@
                     <th:block th:text="${@commonServiceImpl.removeSessionMessage()}"></th:block>
                 </th:block>
                 <div class="col-md-6 text-end">
-                    <img src="img/product_img/laptop.jpg" width="330px" height="400px">
+                    <img th:src="@{'/img/product_img/'+${product.image}}" width="330px" height="400px">
                 </div>
                 <div class="col-md-6">
                     <p class="fs-3">[[${product.title}]]</p>
